parser/tests/snapshots/errors__emit_bad_call.snap
---
source: parser/tests/errors.rs
expression: err

---
error: unexpected token while parsing emit statement
  ┌─ emit_bad_call:1:16
  │
1 │ emit MyEvent(1)()
  │                ^ unexpected token
  │
  = expected a newline


